--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>TITLE</title>
-<body onload="pageLoad()"
+<body onload="pageLoad()" style="margin: 0 !important; padding: 0 !important;">
 <!--HTML ELEMENTS HERE -->
-<div id="svgDiv">
-
-</div>
-
 <script src="index.js" id="src"></script>
 </body>
 </html>
