--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>TITLE</title>
+<title>Ford Circles</title>
 <body onload="pageLoad()" style="margin: 0 !important; padding: 0 !important;">
 <!--HTML ELEMENTS HERE -->
 <script src="index.js" id="src"></script>
